// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Least recently used: Zero cap 1`] = `"Capacity can't be equal to zero"`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 1`] = `[]`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 2`] = `[]`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 3`] = `
[
  "0-3",
  "0-2",
]
`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 4`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
]
`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 5`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
  "2-3",
  "2-2",
]
`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 6`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
  "2-3",
  "2-2",
  "3-3",
  "1-0",
  "1-1",
  "3-2",
]
`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 7`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
  "2-3",
  "2-2",
  "3-3",
  "1-0",
  "1-1",
  "3-2",
  "4-3",
  "4-2",
]
`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 8`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
  "2-3",
  "2-2",
  "3-3",
  "1-0",
  "1-1",
  "3-2",
  "4-3",
  "4-2",
  "5-3",
  "2-0",
  "2-1",
  "5-2",
]
`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 9`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
  "2-3",
  "2-2",
  "3-3",
  "1-0",
  "1-1",
  "3-2",
  "4-3",
  "4-2",
  "5-3",
  "2-0",
  "2-1",
  "5-2",
  "6-3",
  "6-2",
]
`;

exports[`Least recently used: memoization: \`totalLeavesLimit = 2\` 10`] = `
[
  "0-3",
  "0-2",
  "1-3",
  "0-0",
  "0-1",
  "1-2",
  "2-3",
  "2-2",
  "3-3",
  "1-0",
  "1-1",
  "3-2",
  "4-3",
  "4-2",
  "5-3",
  "2-0",
  "2-1",
  "5-2",
  "6-3",
  "6-2",
  "7-3",
  "3-0",
  "3-1",
  "7-2",
]
`;
